--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-preset-react": "^6.11.1",
+    "css-loader": "^0.23.1",
+    "node-sass": "^3.8.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-hot-loader": "^1.3.0",
+    "sass-loader": "^4.0.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.1"
   },
   "devDependencies": {
